# tweet-scrolls

./: .gitignore  AGENT.md  Cargo.toml  Cargo.toml.add_atty_instructions.txt  IMPLEMENTATION-GUIDE-LLM-FILE-GEN.md  PRD-LLM-READY-FILE-GENERATION.md  ReadMe.md  TDD_SUCCESS_STORY.md  TEST-SPEC-LLM-FILE-GENERATION.md  TwitterExportReadMe.txt  _home_amuldotexe_Desktop_GitHub202410_tweet-scrolls_private_data_REALDATA_direct-message-headers.js_schema_report.md  _home_amuldotexe_Desktop_GitHub202410_tweet-scrolls_private_data_REALDATA_direct-messages.js_schema_report.md  check_data_safety.sh  ref01-prd.txt  ref02-architecture.txt  ref03-arch-l2.txt  test_dm.js  test_real_data.sh
.kiro/steering/: Rust Idiomatic Patterns Deep Dive_.md  convert_txt_files.sh  current_status.md  directives.md  file_management.md  idiomatic_rust_tdd_patterns.md  json_schema_discovery.md  product.md  (+7 more)
docs/: CLEANUP_FINAL_SUMMARY.md  Context20250807.md
samples/: direct-messages_end.js  direct-messages_middle1.js  direct-messages_middle2.js  direct-messages_middle3.js  direct-messages_start.js
src/: cli.rs  integration_tests.rs  lib.rs  main.rs  main_integration.rs  main_process.rs
tests/: dm_thread_export_tests.rs  enhanced_csv_writer_tests.rs  enhanced_tweet_tests.rs  file_generation_tests.rs  integration_tests.rs  main_function_integration_tests.rs  main_integration_tests.rs  progress_reporting_tests.rs  timeline_tests.rs  working_enhanced_features_test.rs
zzBackup/: IMMEDIATE_FIXES.md  PROGRESS_ANALYSIS.md  Rust Idiomatic Patterns Deep Dive_.md  TDDAllTheTime.txt  TDD_ACTION_PLAN.md  conversation_summary_current_state_and_next_steps.txt  i00-pattern-list.txt  integration_tests_old.rs  main_corrupted.rs  main_old.rs  test_tweets.js  twitter-circle.txt
zzBackup/file-splitter/: Cargo.toml  EXTENSION_PRESERVATION_FIX.md  demo_extension_fix  demo_extension_fix.rs  test_document.txt
zzBackup/file-splitter/src/: lib.rs  main.rs
zzBackup/file-splitter/tests/: integration_test.rs
(+36 files in other folders)
