[package]
name = "tweet-scrolls"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tweet-scrolls"
path = "src/main.rs"

[[bin]]
name = "test_dm_headers"
path = "src/bin/test_dm_headers.rs"

[[bin]]
name = "tweet_coverage_analysis"
path = "src/bin/tweet_coverage_analysis.rs"

[[bin]]
name = "file-splitter"
path = "src/bin/file_splitter.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
csv = "1.1"
mimalloc = "0.1"
# New dependencies for relationship intelligence
blake3 = "1.5"
regex = "1.10"
indicatif = "0.17"
# CLI argument parsing (temporarily commented out due to network issues)
# clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
float-cmp = "0.9"
