[package]
name = "file-splitter"
version = "0.1.0"
edition = "2021"
description = "A utility for splitting files into smaller chunks"

[dependencies]
common = { path = "../common" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.3"
assert_fs = "1.0"
predicates = "2.1"
assert_cmd = "2.0"
rstest = "0.18"
